--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-query": "^3.38.0",
     "recoil": "^0.7.2"
   },
   "devDependencies": {
