--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "prettier": "prettier --write .",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -23,6 +24,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@mdx-js/react": "^1.6.22",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-docs": "^6.4.22",
@@ -42,6 +45,7 @@
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.11",
+    "husky": "^7.0.0",
     "postcss-html": "^1.4.1",
     "postcss-syntax": "^0.36.2",
     "prettier": "2.6.2",
