--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
     "@stylelint/postcss-css-in-js": "^0.37.2",
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
