--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -16,5 +16,8 @@
       "files": ["*.html", "**/*.html"],
       "customSyntax": "postcss-html"
     }
-  ]
+  ],
+  "rules": {
+    "function-no-unknown": "off"
+  }
 }
