chore: stylelintrc rules 수정

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -16,5 +16,9 @@
       "files": ["*.html", "**/*.html"],
       "customSyntax": "postcss-html"
     }
-  ]
+  ],
+  "rules": {
+    "value-keyword-case": null,
+    "function-no-unknown": null
+  }
 }
