--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
   },
   "packageManager": "yarn@3.2.0",
