feat: 프로젝트 업로드 페이지  (#9)
* chore: storybook snippet 작성

* chore: 코드 정리

* feat: background black100으로 변경

* feat: text 구현, typography

* chore: pre-commit에서 prettier 제거

* chore: select 수정

* feat: upload form 구현 중

* feat: textarea 구현

* chore: 디자인 리사이즈 적용

* feat: title 컴포넌트 분리

* feat: switch 구현

* feat: switch forwardRef로 래핑

* feat: react-hook-form 설치

* feat: checkbox 수정

* chore: color, typo 수정

* feat: upload form wip

* chore: stylelintrc rules 수정

* feat: 등록 진행 컴포넌트 구현

* chore: formStatus 스토리 추가

* feat: rebase main

* chore: 컴포넌트 포함 폴더 이름 대문자로 변경

* chore: alias @로 일괄 변경

* feat: 멤버 추가 폼 구현 (#13)

* chore: 기존 멤버폼 제거

* feat: memberform 상태 연결

* feat: member form interface 정리

* feat: emotion으로 스타일 정리

* chore: member form 스토리 추가

* chore: 타입 수정

* chore: 폴더 대소문자 변경

* feat: 프로젝트 업로드 > 서비스 형태, 프로젝트 기간 폼 구현 (#17)

* fix: checkbox id 제거

* feat: 프로젝트 기간 폼 구현

* feat: 서비스 형태 폼 구현

* chore: 주석 제거

* feat: 이미지 업로더, 링크 추가 폼 구현 (#18)

* feat: image uploader 구현

* feat: 링크 폼 구현

--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.1",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.31.3",
     "react-query": "^3.38.0",
     "react-spring": "^9.4.5",
-    "recoil": "^0.7.2"
+    "recoil": "^0.7.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
