--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.7.0",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
