--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.9.1",
+    "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
-    "nanoid": "^4.0.0",
     "lodash-es": "^4.17.21",
+    "nanoid": "^4.0.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
