refactor: 인증 API 호출

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ NEXT_PUBLIC_FACEBOOK_LOGIN_CALLBACK_URI=http://localhost:3000/auth/cb/facebook/l
 NEXT_PUBLIC_FACEBOOK_REGISTER_CALLBACK_URI=http://localhost:3000/auth/cb/facebook/register
 NEXT_PUBLIC_FACEBOOK_LOGIN_CODE_ENDPOINT=http://localhost:5000/api/v1/idp/facebook/auth
 NEXT_PUBLIC_FACEBOOK_REGISTER_CODE_ENDPOINT=http://localhost:5000/api/v1/idp/facebook/register
+NEXT_PUBLIC_AUTH_API_URL=http://localhost:5000
