feat: 이미지 업로드 인터페이스 수정, s3 업로드 기능 구현

--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ NEXT_PUBLIC_FACEBOOK_REGISTER_CALLBACK_URI=http://localhost:3000/auth/cb/faceboo
 NEXT_PUBLIC_FACEBOOK_LOGIN_CODE_ENDPOINT=http://localhost:5000/api/v1/idp/facebook/auth
 NEXT_PUBLIC_FACEBOOK_REGISTER_CODE_ENDPOINT=http://localhost:5000/api/v1/idp/facebook/register
 NEXT_PUBLIC_AUTH_API_URL=http://localhost:5000
-NEXT_PUBLIC_API_URL=http://localhost:4000
+NEXT_PUBLIC_PROJECT_API_URL=http://api.sopt-playground.ga:4000
