--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
