--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "lodash-es": "^4.17.21",
