--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "12.1.5",
