fix: 환경변수 예시 수정

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_ORIGIN=http://localhost:3000
 NEXT_PUBLIC_FACEBOOK_APP_ID=520253793038775
-NEXT_PUBLIC_AUTH_API_URL=https://api.sopt-playground.ga/auth/api/v1
-NEXT_PUBLIC_API_URL=https://api.sopt-playground.ga/project/api/v1
+NEXT_PUBLIC_AUTH_API_URL=https://api.sopt-playground.ga/auth
+NEXT_PUBLIC_API_URL=https://api.sopt-playground.ga/project
