--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "12.1.5",
@@ -51,6 +52,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
