fix: 모바일 반응형 이슈 수정 대응 (#75)
* chore(c): eslint autofix 설정

* chore: 프로젝트 이미지 업로더 isMobile 제거

* chore: 헤더 모바일 반응형 스타일 수정

* chore: eslint autofix + stylelint auto fix 수정

* feat: 프로젝트 상세 페이지 모바일 대응 수정

* feat: react-responsive 의존성 제거, 관련 파일들 모바일 반응형 css로 대응

* chore: 미디어쿼리 값 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
   },
   "stylelint.validate": ["css", "scss", "typescript", "typescriptreact"],
   "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
     "source.fixAll": true
   },
   "typescript.preferences.importModuleSpecifier": "non-relative"
