feat: 멤버 상세 페이지 모바일 뷰 작업

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "source.fixAll.eslint": true,
     "source.fixAll": true
   },
-  "typescript.preferences.importModuleSpecifier": "non-relative"
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "cSpell.words": ["appjam", "sopkathon"]
 }
