--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,4 @@
 NEXT_PUBLIC_ORIGIN=http://localhost:3000
 NEXT_PUBLIC_FACEBOOK_APP_ID=520253793038775
-NEXT_PUBLIC_AUTH_API_URL=https://sopt-internal-dev.pages.dev/auth
-NEXT_PUBLIC_API_URL=https://sopt-internal-dev.pages.dev/project
+NEXT_PUBLIC_API_URL=https://playground.dev.sopt.org
 NEXT_PUBLIC_DEBUG=true
