--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "12.1.5",
+    "postcss": "^8.4.19",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.31.3",
@@ -51,6 +53,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
