--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,5 +19,14 @@ jobs:
       - name: Install Packages
         run: yarn install
 
+      - name: Nextjs Build Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx', '**.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+
       - name: Build Test
         run: yarn build
