--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -18,6 +18,14 @@ jobs:
         uses: c-hive/gha-yarn-cache@v2
       - name: Install Packages
         run: yarn install
+      - name: Nextjs Build Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx', '**.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
       - name: Set .env
         run: echo "${{ secrets.PROJECT_ENV }}" > .env.local
       - name: Build
