--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "focus-trap-react": "^10.0.2",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "12.1.5",
