--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ NEXT_PUBLIC_FACEBOOK_APP_ID=520253793038775
 NEXT_PUBLIC_GOOGLE_OAUTH_CLIENT_ID=456944189609-jo13a6v8cb25vofi8qfldu3ionkq4u2q.apps.googleusercontent.com
 NEXT_PUBLIC_API_URL=https://playground.dev.sopt.org
 NEXT_PUBLIC_DEBUG=true
+NEXT_PUBLIC_GTM_ID=GTM-KJHR376
