--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    environment: development
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Branch
@@ -27,6 +28,7 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx', '**.json') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
-
+      - name: Set .env
+        run: echo "${{ secrets.PROJECT_ENV }}" > .env.local
       - name: Build Test
         run: yarn build
