--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "postinstall": "husky install",
-    "typecheck": "tsc --noemit -p ."
+    "typecheck": "tsc --noemit -p .",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
@@ -19,6 +20,7 @@
     "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
+    "@next/bundle-analyzer": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
@@ -59,6 +61,7 @@
     "@types/react-dom": "18.0.1",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
