chore: nextjs 버전 bump

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "focus-trap-react": "^10.0.2",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-markdown": "^8.0.4",
     "react-query": "^3.38.0",
@@ -61,7 +61,7 @@
     "babel-loader": "^8.2.5",
     "chromatic": "^6.7.0",
     "eslint": "^8.13.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.12",
     "husky": "^7.0.0",
