--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
+    "@types/react-datepicker": "^4.8.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
@@ -28,6 +29,7 @@
     "nanoid": "^4.0.0",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.39.5",
     "react-query": "^3.38.0",
