feat: Amplitude 설정

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ NEXT_PUBLIC_GOOGLE_OAUTH_CLIENT_ID=456944189609-jo13a6v8cb25vofi8qfldu3ionkq4u2q
 NEXT_PUBLIC_API_URL=https://playground.dev.sopt.org
 NEXT_PUBLIC_DEBUG=true
 NEXT_PUBLIC_GTM_ID=GTM-KJHR376
+NEXT_PUBLIC_AMPLITUDE_API_KEY=
