--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
     "@next/bundle-analyzer": "^13.1.1",
+    "@next/font": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
