--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
     "@next/bundle-analyzer": "^13.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@types/react-datepicker": "^4.8.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "axios": "^0.27.2",
