--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -19,6 +19,7 @@
   ],
   "rules": {
     "value-keyword-case": null,
-    "function-no-unknown": null
+    "function-no-unknown": null,
+    "custom-property-empty-line-before": null
   }
 }
