--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.6.6",
     "@hookform/resolvers": "^2.9.1",
     "@next/bundle-analyzer": "^13.1.1",
+    "@radix-ui/react-collapsible": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@types/react-datepicker": "^4.8.0",
