chore: 빌드와 관련없는 파일 수정 시 action 실행되지 않도록 변경

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -3,8 +3,12 @@ name: Build test
 on:
   push:
     branches: main
+    path:
+      - '**.(js|ts|jsx|tsx)'
   pull_request:
     branches: main
+    paths:
+      - - '**.(js|ts|jsx|tsx)'
 
 jobs:
   build:
@@ -32,3 +36,8 @@ jobs:
         run: echo "${{ secrets.PROJECT_ENV }}" > .env.local
       - name: Build Test
         run: yarn build
+
+
+name Buildtest
+
+on:
