chore: fix typo

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: main
     paths:
-      - - '**.(js|ts|jsx|tsx)'
+      - '**.(js|ts|jsx|tsx)'
 
 jobs:
   build:
@@ -36,8 +36,3 @@ jobs:
         run: echo "${{ secrets.PROJECT_ENV }}" > .env.local
       - name: Build Test
         run: yarn build
-
-
-name Buildtest
-
-on:
