chore: 스토리북 파일이 수정될 경우만 action 돌도록 변경

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
   push:
     branches: [main, develop]
+    path:
+      - '**.stories.(js|jsx|ts|tsx|mdx)'
 
 jobs:
   chromatic-deploy:
