--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    path:
-      - '**.(js|ts|jsx|tsx)'
+    paths-ignore:
+      - '**.md'
   workflow_dispatch:
 
 jobs:
