chore: deploy 조건도 수정

--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -6,6 +6,9 @@ on:
       - main
     paths-ignore:
       - '**.md'
+      - '.github/**/*'
+      - '.husky/**/*'
+      - '.vscode/**/*'
   workflow_dispatch:
 
 jobs:
