chore: 워크플로 조건 변경

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -15,11 +15,13 @@ jobs:
           #if use checkout@v2, https://github.com/marketplace/actions/publish-to-chromatic#checkout-depth
           fetch-depth: 0
 
-      - name: Yarn Cache
-        uses: c-hive/gha-yarn-cache@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'yarn'
 
       - name: Install Dependency
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Publish Chromatic
         id: publish_chromatic
