chore: 다운로드 오류 수정

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install Packages
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Nextjs Build Cache
         uses: actions/cache@v3
