--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: built-app
+          path: out
       - name: LS
         run: ls -al
       - name: Publish
