chore: 개발 버전 배포 개선

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
       env:
         required: true
         type: string
+      upload:
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   build:
