--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "stylelint": "stylelint **/*.(ts|tsx)",
     "prettier": "prettier --write .",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -68,6 +69,7 @@
     "@types/react-dom": "18.0.1",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.7.0",
+    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.13.0",
     "eslint-config-next": "^13.1.1",
