--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-storybook": "build-storybook",
     "postinstall": "husky install",
     "typecheck": "tsc --noemit -p .",
-    "analyze": "cross-env ANALYZE=true next build"
+    "analyze": "cross-env ANALYZE=true next build",
+    "check": "conc \"yarn:lint\" \"yarn:typecheck\" \"yarn:stylelint\""
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.6.7",
