--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sopt.org-project",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "playground-common"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,7 +15,8 @@
     "build-storybook": "build-storybook",
     "postinstall": "husky install",
     "typecheck": "tsc --noemit -p .",
-    "analyze": "cross-env ANALYZE=true next build"
+    "analyze": "cross-env ANALYZE=true next build",
+    "playground-common:build": "tsup"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.6.7",
@@ -88,6 +92,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tsup": "^6.5.0",
     "typescript": "4.6.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0"
