chore: 빼먹은 step 추가

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,6 +26,7 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.repo-settings == 'true' }}
     runs-on: ubuntu-latest
+    steps:
       - name: Checkout Branch
         uses: actions/checkout@v2
 
