--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    // "incremental": true,
-    "jsx": "react-jsx",
+    "incremental": true,
+    "jsx": "preserve",
     "jsxImportSource": "@emotion/react"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
