--- a/playground-common/package.json
+++ b/playground-common/package.json
@@ -12,8 +12,7 @@
   "sideEffects": false,
   "scripts": {
     "clean": "rm -rf dist",
-    "version": "yarn version",
-    "publish": "npm publish --access=public"
+    "version": "yarn version"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
