--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - '**.md'
+      - '.github/**/*'
+      - '.husky/**/*'
+      - '.vscode/**/*'
   workflow_dispatch:
 
 jobs:
