--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -9,7 +9,7 @@ on:
       - main
     paths-ignore:
       - '**.md'
-      - '.github/**/*'
+      - '.github/**/!(*.yml)'
       - '.husky/**/*'
       - '.vscode/**/*'
 
