--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,9 +1,6 @@
 name: Check
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -24,8 +21,8 @@ jobs:
               - '!.husky/**/*'
               - '!.vscode/**/*'
   check:
-    needs: changes
-    if: ${{ needs.changes.outputs.repo-settings == 'true' }}
+    needs: should-check
+    if: ${{ needs.should-check.outputs.repo-settings == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Branch
