chore: environment 다시 추가

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -11,6 +11,7 @@ jobs:
 
   deploy:
     needs: build-app
+    environment: production
     runs-on: ubuntu-latest
     permissions:
       contents: read
